--- a/feedsidebar/chrome/locale/ja-JP/locale.dtd
+++ b/feedsidebar/chrome/locale/ja-JP/locale.dtd
@@ -1,8 +1,8 @@
-<!ENTITY feedbar.buttonLabel "未読フィードアイテム">
-<!ENTITY feedbar.sidebarTitle "未読フィードアイテム">
-<!ENTITY feedbar.buttonTooltip "ライブブックマークから新しいアイテムをサイドバーに表示します">
+<!ENTITY feedbar.buttonLabel "未読フィード項目">
+<!ENTITY feedbar.sidebarTitle "未読フィード項目">
+<!ENTITY feedbar.buttonTooltip "ライブブックマークから新しい項目をサイドバーに表示します">
 <!ENTITY feedbar.accesskey "F">
-<!ENTITY feedbar.preview.markAsRead "フィードかアイテムを既読にする">
+<!ENTITY feedbar.preview.markAsRead "フィードまたは項目を既読にする">
 <!ENTITY feedbar.preview.summary "要約">
 <!ENTITY feedbar.open "開く">
 <!ENTITY feedbar.openInTab "新しいタブで開く">
@@ -16,12 +16,12 @@
 <!ENTITY feedbar.minutes "分">
 <!ENTITY feedbar.hour "時間">
 <!ENTITY feedbar.hours "時間">
-<!ENTITY feedbar.showLastTooltip "表示されるアイテムの時期を制限します">
+<!ENTITY feedbar.showLastTooltip "表示される項目の期間を制限します">
 <!ENTITY feedbar.showLastDaysPre "最近の">
-<!ENTITY feedbar.showLastDaysPost "日間を表示">
+<!ENTITY feedbar.showLastDaysPost "日分を表示">
 <!ENTITY feedbar.showLastWeeksPre "最近の">
-<!ENTITY feedbar.showLastWeeksPost "週間を表示">
-<!ENTITY feedbar.showAllItems "すべてのアイテムを表示">
-<!ENTITY feedbar.showLastDay "今日を表示">
-<!ENTITY feedbar.showLastWeek "今週を表示">
-<!ENTITY feedbar.showLastMonth "今月を表示">
+<!ENTITY feedbar.showLastWeeksPost "週分を表示">
+<!ENTITY feedbar.showAllItems "すべての項目を表示">
+<!ENTITY feedbar.showLastDay "1日分を表示">
+<!ENTITY feedbar.showLastWeek "今週分を表示">
+<!ENTITY feedbar.showLastMonth "今月分を表示">
