--- a/feedsidebar/chrome/locale/ja-JP/locale.properties
+++ b/feedsidebar/chrome/locale/ja-JP/locale.properties
@@ -7,10 +7,10 @@ feedbar.errors.unavailable=\u30D5\u30A3\u30FC\u30C9\u306F\u5229\u7528\u3067\u304
 feedbar.errors.emptyFeed=\u7A7A\u306E\u30D5\u30A3\u30FC\u30C9
 feedbar.errors.invalidFeed=\u30D5\u30A3\u30FC\u30C9\u306B\u7121\u52B9\u306A root \u8981\u7D20\u304C\u3042\u308A\u307E\u3059
 feedbar.errors.noChannel=\u671F\u5F85\u3055\u308C\u305F channel \u8981\u7D20\u304C\u3042\u308A\u307E\u305B\u3093
-feedbar.errors.noChannelElements=channel \u30BF\u30B0\u306B\u8981\u7D20\u304C\u3042\u308A\u307E\u305B\u3093
+feedbar.errors.noChannelElements=channel \u30BF\u30B0\u306E\u4E2D\u306B\u8981\u7D20\u304C\u3042\u308A\u307E\u305B\u3093
 feedbar.errors.noFeedsFound=\u30D5\u30A3\u30FC\u30C9\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
-feedbar.errors.noFeedsFoundMore=\u30B5\u30A4\u30C9\u30D0\u30FC\u306B\u30D5\u30A3\u30FC\u30C9\u306E\u30A2\u30A4\u30C6\u30E0\u3092\u8868\u793A\u3059\u308B\u305F\u3081\u306B Firefox \u306E\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u6A5F\u80FD\u3067\u30D5\u30A3\u30FC\u30C9\u3092\u8CFC\u8AAD\u3059\u308B\u3002
+feedbar.errors.noFeedsFoundMore=\u30B5\u30A4\u30C9\u30D0\u30FC\u3067\u30D5\u30A3\u30FC\u30C9\u306E\u9805\u76EE\u3092\u8868\u793A\u3059\u308B\u305F\u3081\u306B Firefox \u306E\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u6A5F\u80FD\u3067\u30D5\u30A3\u30FC\u30C9\u3092\u8CFC\u8AAD\u3059\u308B\u3002
 feedbar.errors.noFeedsFoundLabel=\u8A73\u7D30\u306A\u60C5\u5831
 feedbar.errors.noFeedsFoundKey=M
 feedbar.noTitle=\u7121\u984C
-feedbar.noContent=\u30B3\u30F3\u30C6\u30F3\u30C8\u306A\u3057
+feedbar.noContent=\u5185\u5BB9\u306A\u3057
