--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -1,16 +1,24 @@
-extensions.feedbar@efinke.com.description=Stellt die ungelesenen RSS-Beiträge der dynamischen Lesezeichen in der Sidebar dar.
+extensions.feedbar@efinke.com.description=Stellt die ungelesenen Feed-Beiträge der dynamischen Lesezeichen in der Sidebar dar.
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=Nächste Aktualisierung: %S
-feedbar.checkingFeeds=RSS-Feed %S von %S wird aktualisiert
-feedbar.errors.unavailable=RSS-Feed ist nicht erreichbar
-feedbar.errors.emptyFeed=RSS-Feed enthält keine Einträge
-feedbar.errors.invalidFeed=RSS-Feed hat ungültiges Format
-feedbar.errors.noChannel=RSS-Dokument ist leer
-feedbar.errors.noChannelElements=RSS-Dokument ist leer
-feedbar.errors.noFeedsFound=Keine RSS-Feeds gefunden
-feedbar.errors.noFeedsFoundMore=Fügen Sie einen RSS-Feed mittels Firefox als Dynamisches Lesezeichen hinzu und betrachten Sie diese in der Sidebar.
+feedbar.checkingFeeds=Feed %S von %S wird aktualisiert
+feedbar.errors.unavailable=Feed ist nicht erreichbar
+feedbar.errors.emptyFeed=Feed enthält keine Einträge
+feedbar.errors.invalidFeed=Ungültiger Feed
+feedbar.errors.noChannel=Feed ist leer
+feedbar.errors.noChannelElements=Feed ist leer
+feedbar.errors.noFeedsFound=Keine Feeds gefunden
+feedbar.errors.noFeedsFoundMore=Fügen Sie einen Feed mittels Firefox als Dynamisches Lesezeichen hinzu und betrachten Sie diese in der Sidebar.
 feedbar.errors.noFeedsFoundLabel=Details
 feedbar.errors.noFeedsFoundKey=D
+feedbar.errors.couldNotUnsubscribe=Es trat ein Fehler auf: Feed Sidebar konnte den Feed nicht aus Ihren Lesezeichen entfernen
+feedbar.errors.parseError=Fehler beim Auswerten des Feeds
+feedbar.errors.invalidUrl=Keine Feed-Adresse
 feedbar.noTitle=Kein Titel
 feedbar.noContent=Kein Inhalt
+feedbar.noSummary=Keine Zusammenfassung verfügbar
+feedbar.warnOnTabs=Warnen, falls das Öffnen mehrerer Tabs den Browser verlangsamen kann
+feedbar.warnOnTabsMessage=Es werden %S Tabs gleichzeitig geöffnet; das könnte den Computer verlangsamen, während die Seiten geladen werden. Sind Sie sicher, dass Sie fortfahren möchten?
+feedbar.confirmOpenInTabs=Öffnen bestätigen
+feedbar.openConfirmText=Tabs öffnen
