--- a/feedsidebar/chrome/locale/fy-NL/locale.properties
+++ b/feedsidebar/chrome/locale/fy-NL/locale.properties
@@ -12,5 +12,13 @@ feedbar.errors.noFeedsFound=Gjin feeds fûn.
 feedbar.errors.noFeedsFoundMore=Abbonnearje op in feed mei Firefox Live Blêdwizers om feeds te sjen yn de sidebalke.
 feedbar.errors.noFeedsFoundLabel=Mear ynformaasje
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=Flater: Feed Sidebalke koe de feed net fuortsmite út jo blêdwizers.
+feedbar.errors.parseError=Flater by ferwurkjen feed.
+feedbar.errors.invalidUrl=Dit is gjin feed URL.
 feedbar.noTitle=Gjin titel
 feedbar.noContent=Gjin ynhâld
+feedbar.noSummary=Gjin gearfetting opjûn.
+feedbar.warnOnTabs=Warskôgje my as it iepenjen fan mear ljepblêden de browser fertraget
+feedbar.warnOnTabsMessage=Jo steane op it punt om %S ljepblêden te iepenjen. Dit kin de browser trager meitsje as de siden laden wurde. Wolle jo trochgean?
+feedbar.confirmOpenInTabs=Iepenjen befestigje
+feedbar.openConfirmText=Ljepblêden iepenje
