--- a/feedsidebar/chrome/locale/ja-JP/locale.properties
+++ b/feedsidebar/chrome/locale/ja-JP/locale.properties
@@ -1,16 +1,24 @@
-extensions.feedbar@efinke.com.description=\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u306E\u672A\u8AAD\u30A2\u30A4\u30C6\u30E0\u3092\u30B5\u30A4\u30C9\u30D0\u30FC\u306B\u8868\u793A\u3057\u307E\u3059\u3002
+extensions.feedbar@efinke.com.description=\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u306E\u9805\u76EE\u3092\u30B5\u30A4\u30C9\u30D0\u30FC\u306B\u8868\u793A\u3057\u307E\u3059\u3002
 feedbar.time.pm=PM
 feedbar.time.am=AM
 feedbar.nextUpdate=\u6B21\u306E\u66F4\u65B0: %S
-feedbar.checkingFeeds=\u30D5\u30A3\u30FC\u30C9\u3092\u78BA\u8A8D\u4E2D\u2026 ( %S / %S )
+feedbar.checkingFeeds=\u30D5\u30A3\u30FC\u30C9\u3092\u78BA\u8A8D\u4E2D... ( %S / %S )
 feedbar.errors.unavailable=\u30D5\u30A3\u30FC\u30C9\u306F\u5229\u7528\u3067\u304D\u307E\u305B\u3093
 feedbar.errors.emptyFeed=\u7A7A\u306E\u30D5\u30A3\u30FC\u30C9
-feedbar.errors.invalidFeed=\u30D5\u30A3\u30FC\u30C9\u306B\u7121\u52B9\u306A root \u8981\u7D20\u304C\u3042\u308A\u307E\u3059
+feedbar.errors.invalidFeed=\u7121\u52B9\u306A\u30D5\u30A3\u30FC\u30C9\u3067\u3059\u3002
 feedbar.errors.noChannel=\u671F\u5F85\u3055\u308C\u305F channel \u8981\u7D20\u304C\u3042\u308A\u307E\u305B\u3093
 feedbar.errors.noChannelElements=channel \u30BF\u30B0\u306E\u4E2D\u306B\u8981\u7D20\u304C\u3042\u308A\u307E\u305B\u3093
 feedbar.errors.noFeedsFound=\u30D5\u30A3\u30FC\u30C9\u304C\u898B\u3064\u304B\u308A\u307E\u305B\u3093\u3067\u3057\u305F\u3002
 feedbar.errors.noFeedsFoundMore=\u30B5\u30A4\u30C9\u30D0\u30FC\u3067\u30D5\u30A3\u30FC\u30C9\u306E\u9805\u76EE\u3092\u8868\u793A\u3059\u308B\u305F\u3081\u306B Firefox \u306E\u30E9\u30A4\u30D6\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u6A5F\u80FD\u3067\u30D5\u30A3\u30FC\u30C9\u3092\u8CFC\u8AAD\u3059\u308B\u3002
 feedbar.errors.noFeedsFoundLabel=\u8A73\u7D30\u306A\u60C5\u5831
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=\u30A8\u30E9\u30FC: Feed Sidebar \u306F\u30D6\u30C3\u30AF\u30DE\u30FC\u30AF\u304B\u3089\u30D5\u30A3\u30FC\u30C9\u3092\u9664\u53BB\u3067\u304D\u307E\u305B\u3093\u3067\u3057\u305F\u3002
+feedbar.errors.parseError=\u30D5\u30A3\u30FC\u30C9\u89E3\u6790\u30A8\u30E9\u30FC\u3067\u3059\u3002
+feedbar.errors.invalidUrl=\u30D5\u30A3\u30FC\u30C9 URL \u3067\u306F\u3042\u308A\u307E\u305B\u3093\u3002
 feedbar.noTitle=\u7121\u984C
 feedbar.noContent=\u5185\u5BB9\u306A\u3057
+feedbar.noSummary=\u8981\u7D04\u304C\u63D0\u4F9B\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
+feedbar.warnOnTabs=\u30D6\u30E9\u30A6\u30B6\u3092\u4F4E\u901F\u5316\u3055\u305B\u308B\u6050\u308C\u304C\u3042\u308B\u591A\u6570\u306E\u30BF\u30D6\u3092\u958B\u304F\u5834\u5408\u306F\u8B66\u544A\u3059\u308B
+feedbar.warnOnTabsMessage=%S \u679A\u306E\u30BF\u30D6\u3092\u958B\u3053\u3046\u3068\u3057\u3066\u3044\u307E\u3059\u3002\u3053\u308C\u306F\u30DA\u30FC\u30B8\u3092\u8AAD\u307F\u8FBC\u3080\u9593\u3001\u30D6\u30E9\u30A6\u30B6\u3092\u4F4E\u901F\u5316\u3055\u305B\u308B\u6050\u308C\u304C\u3042\u308A\u307E\u3059\u3002\u672C\u5F53\u306B\u7D9A\u884C\u3057\u307E\u3059\u304B\uFF1F
+feedbar.confirmOpenInTabs=\u627F\u8A8D\u3057\u3066\u958B\u304F
+feedbar.openConfirmText=\u30BF\u30D6\u3092\u958B\u304F
