--- a/feedsidebar/chrome/locale/pl-PL/locale.dtd
+++ b/feedsidebar/chrome/locale/pl-PL/locale.dtd
@@ -7,9 +7,13 @@
 <!ENTITY feedbar.open "Otwórz">
 <!ENTITY feedbar.openInTab "Otwórz w nowej karcie">
 <!ENTITY feedbar.openAllInTabs "Otwórz wszystkie w kartach">
+<!ENTITY feedbar.openUnreadInTabs "Otwórz nieprzeczytane wiadomości w kartach">
 <!ENTITY feedbar.openFeedInTabs "Otwórz kanał w nowej karcie">
-<!ENTITY feedbar.markAsRead "Oznacz jako przeczytana">
+<!ENTITY feedbar.openUnreadFeedInTabs "Otwórz nieprzeczytane wiadomości kanału w katach">
+<!ENTITY feedbar.markAsRead "Oznacz jako przeczytane">
+<!ENTITY feedbar.markAsUnread "Oznacz jako nieprzeczytane">
 <!ENTITY feedbar.markFeedAsRead "Oznacz kanał jako przeczytany">
+<!ENTITY feedbar.markFeedAsUnread "Oznacz kanał jako nieprzeczytany">
 <!ENTITY feedbar.markAllAsRead "Oznacz wszystkie jako przeczytane">
 <!ENTITY feedbar.reloadFeeds "Odśwież kanały">
 <!ENTITY feedbar.stopFeedUpdate "Nie aktualizuj kanału">
@@ -17,11 +21,19 @@
 <!ENTITY feedbar.hour "h">
 <!ENTITY feedbar.hours "h">
 <!ENTITY feedbar.showLastTooltip "Przedział czasowy z jakiego będą wyświetlane wiadomości">
-<!ENTITY feedbar.showLastDaysPre "Wyświetl z ostatnich ">
-<!ENTITY feedbar.showLastDaysPost " dni">
-<!ENTITY feedbar.showLastWeeksPre "Wyświetl z ostatnich ">
-<!ENTITY feedbar.showLastWeeksPost " tygodni">
+<!ENTITY feedbar.showLastDaysPre "Wyświetl z ostatnich">
+<!ENTITY feedbar.showLastDaysPost "dni">
+<!ENTITY feedbar.showLastWeeksPre "Wyświetl z ostatnich">
+<!ENTITY feedbar.showLastWeeksPost "tygodni">
 <!ENTITY feedbar.showAllItems "Wyświetl wszystkie wiadomości">
 <!ENTITY feedbar.showLastDay "Wyświetl wiadomości z dnia dzisiejszego">
 <!ENTITY feedbar.showLastWeek "Wyświetl wiadomości z ostatniego tygodnia">
 <!ENTITY feedbar.showLastMonth "Wyświetl wiadomości z ostatniego miesiąca">
+<!ENTITY feedbar.unsubscribe "Anuluj subskrypcję">
+<!ENTITY feedbar.options "Opcje">
+<!ENTITY feedbar.hideReadItems "Nie wyświetlaj przeczytane wiadomości">
+<!ENTITY feedbar.updateEvery1 "Aktualizuj kanał co">
+<!ENTITY feedbar.updateEvery2 "min.">
+<!ENTITY feedbar.onlyShow1 "Wyświetlaj tylko wiadomości z ostatnich">
+<!ENTITY feedbar.onlyShow2 "dni. (Wprowadź 0, aby wyświetlać wszystkie)">
+<!ENTITY feedbar.24HourTime "Wświetlaj czas w formacie 24 godzinnym">
