--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -5,12 +5,20 @@ feedbar.nextUpdate=Aktualizacja o: %S
 feedbar.checkingFeeds=Sprawdzanie %S z %S kanałów...
 feedbar.errors.unavailable=Kanał jest niedostępny
 feedbar.errors.emptyFeed=Pusty kanał
-feedbar.errors.invalidFeed=Kanał ma nieprawidłowy element
+feedbar.errors.invalidFeed=Nieprawidłowy kanał
 feedbar.errors.noChannel=Brak oczekiwanych elementów kanału
-feedbar.errors.noChannelElements=Brak elementów w znaczniku kanału
+feedbar.errors.noChannelElements=Brak oznaczonych elementów kanału
 feedbar.errors.noFeedsFound=Nie znaleziono kanałów
 feedbar.errors.noFeedsFoundMore=Aby oglądać wiadomości z kanału w panelu bocznym, subskrybuj kanał za pomocą dynamicznych zakładek Firefoksa
 feedbar.errors.noFeedsFoundLabel=Więcej informacji
 feedbar.errors.noFeedsFoundKey=W
+feedbar.errors.couldNotUnsubscribe=Błąd. Feed Sidebar nie mógł usunąć kanału z zakładek
+feedbar.errors.parseError=Błąd przetwarzania kanału.
+feedbar.errors.invalidUrl=Brak adresu kanału.
 feedbar.noTitle=Brak tytułu
 feedbar.noContent=Nie ma nowych wiadomości
+feedbar.noSummary=Brak krótkiego opisu.
+feedbar.warnOnTabs=Informuj jeśli otwarcie wielu kart może spowolnić przeglądarkę
+feedbar.warnOnTabsMessage=Zamierzasz otworzyć %S kart. Otwieranie tylu stron może spowolnić działanie przeglądarki. Czy na pewno chcesz kontynuować?
+feedbar.confirmOpenInTabs=Potwierdzenie otwierania
+feedbar.openConfirmText=Otwórz karty
