--- a/feedsidebar/chrome/locale/ja-JP/locale.dtd
+++ b/feedsidebar/chrome/locale/ja-JP/locale.dtd
@@ -1,15 +1,19 @@
-<!ENTITY feedbar.buttonLabel "未読フィード項目">
-<!ENTITY feedbar.sidebarTitle "未読フィード項目">
-<!ENTITY feedbar.buttonTooltip "ライブブックマークから新しい項目をサイドバーに表示します">
+<!ENTITY feedbar.buttonLabel "フィード">
+<!ENTITY feedbar.sidebarTitle "フィード">
+<!ENTITY feedbar.buttonTooltip "ライブブックマークから項目をサイドバーに表示します">
 <!ENTITY feedbar.accesskey "F">
 <!ENTITY feedbar.preview.markAsRead "フィードまたは項目を既読にする">
 <!ENTITY feedbar.preview.summary "要約">
 <!ENTITY feedbar.open "開く">
 <!ENTITY feedbar.openInTab "新しいタブで開く">
 <!ENTITY feedbar.openAllInTabs "タブですべて開く">
+<!ENTITY feedbar.openUnreadInTabs "タブで未読の項目を開く">
 <!ENTITY feedbar.openFeedInTabs "タブでフィードを開く">
+<!ENTITY feedbar.openUnreadFeedInTabs "タブで未読フィードの項目を開く">
 <!ENTITY feedbar.markAsRead "既読にする">
+<!ENTITY feedbar.markAsUnread "未読にする">
 <!ENTITY feedbar.markFeedAsRead "フィードを既読にする">
+<!ENTITY feedbar.markFeedAsUnread "フィードを未読にする">
 <!ENTITY feedbar.markAllAsRead "すべて既読にする">
 <!ENTITY feedbar.reloadFeeds "フィードを再読み込み">
 <!ENTITY feedbar.stopFeedUpdate "フィードの更新を中止する">
@@ -25,3 +29,11 @@
 <!ENTITY feedbar.showLastDay "1日分を表示">
 <!ENTITY feedbar.showLastWeek "今週分を表示">
 <!ENTITY feedbar.showLastMonth "今月分を表示">
+<!ENTITY feedbar.unsubscribe "購読解除">
+<!ENTITY feedbar.options "オプション">
+<!ENTITY feedbar.hideReadItems "読んだ項目を非表示にする">
+<!ENTITY feedbar.updateEvery1 "フィードを">
+<!ENTITY feedbar.updateEvery2 "分ごとに更新する。">
+<!ENTITY feedbar.onlyShow1 "最後の">
+<!ENTITY feedbar.onlyShow2 "日分の項目のみ表示する。(0 ですべて表示)">
+<!ENTITY feedbar.24HourTime "24時間制を利用する">
