--- a/feedsidebar/chrome/locale/zh-TW/locale.properties
+++ b/feedsidebar/chrome/locale/zh-TW/locale.properties
@@ -12,5 +12,13 @@ feedbar.errors.noFeedsFound=沒有即時書籤訊息
 feedbar.errors.noFeedsFoundMore=透過 Firefox 訂閱一個即時書籤功能可閱讀書籤內容於側邊列
 feedbar.errors.noFeedsFoundLabel=更多資訊
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=錯誤：Feed Sidebar 無法從您的書籤中刪除這個即時書籤
+feedbar.errors.parseError=錯誤貼上即時書籤
+feedbar.errors.invalidUrl=沒有即時書籤的網址
 feedbar.noTitle=沒有標題
 feedbar.noContent=沒有內容
+feedbar.noSummary=無提供即時書籤的說明
+feedbar.warnOnTabs=警告我開啟多個分頁時可能會造成瀏覽器變慢的問題
+feedbar.warnOnTabsMessage=您將開啟 %S 個分頁。可能會使瀏覽器變慢，您確定繼續開啟這些分頁嗎？
+feedbar.confirmOpenInTabs=確定開啟
+feedbar.openConfirmText=開啟分頁
