--- a/feedsidebar/chrome/locale/zh-CN/locale.properties
+++ b/feedsidebar/chrome/locale/zh-CN/locale.properties
@@ -12,5 +12,13 @@ feedbar.errors.noFeedsFound=找不到订阅
 feedbar.errors.noFeedsFoundMore=必须添加订阅到实时书签才能在侧栏查看项目
 feedbar.errors.noFeedsFoundLabel=更多信息
 feedbar.errors.noFeedsFoundKey=M
+feedbar.errors.couldNotUnsubscribe=错误：Feed Sidebar 不能从书签中移除该订阅。
+feedbar.errors.parseError=分析订阅时遇到错误
+feedbar.errors.invalidUrl=不是有效的订阅地址
 feedbar.noTitle=无标题
 feedbar.noContent=空白内容
+feedbar.noSummary=没有提供概要
+feedbar.warnOnTabs=打开多个可能会影响 Firefox 速度的标签页时警告我
+feedbar.warnOnTabsMessage=你将要打开 %S 个标签页，载入页面时可能会影响 Firefox 速度，是否继续？
+feedbar.confirmOpenInTabs=确认打开
+feedbar.openConfirmText=打开标签页
