Added 'Copy Title' and 'Copy Link' items to context menu

--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -30,6 +30,9 @@
 <!ENTITY feedbar.showLastWeek "Show last week">
 <!ENTITY feedbar.showLastMonth "Show last month">
 
+<!ENTITY feedbar.copyTitle "Copy Title">
+<!ENTITY feedbar.copyLink "Copy Link">
+
 <!ENTITY feedbar.unsubscribe "Unsubscribe">
 <!ENTITY feedbar.options "Options">
 <!ENTITY feedbar.hideReadItems "Hide read items">
