--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -21,9 +21,13 @@ feedbar.errors.invalidFeed=Invalid feed.
 feedbar.noTitle=No Title
 feedbar.noContent=No Content
 
-
 feedbar.noSummary=No summary provided.
 feedbar.warnOnTabs=Warn me when opening multiple tabs might slow down the browser
 feedbar.warnOnTabsMessage=You are about to open %S tabs. This might slow down the browser while the pages are loading. Are you sure you want to continue?
 feedbar.confirmOpenInTabs=Confirm Open
 feedbar.openConfirmText=Open tabs
+
+feedbar.newItemTitle=New Feed Item
+feedbar.newItemsTitle=New Feed Items
+feedbar.newItemBody=You have one new feed item.
+feedbar.newItemsBody=You have %S new feed items.
