Added offline preview, consolidated icons.

--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -31,3 +31,4 @@ feedbar.newItemTitle=New Feed Item
 feedbar.newItemsTitle=New Feed Items
 feedbar.newItemBody=You have one new feed item.
 feedbar.newItemsBody=You have %S new feed items.
+feedbar.workingOffline=Working offline
