--- a/feedsidebar/chrome/locale/en-US/locale.dtd
+++ b/feedsidebar/chrome/locale/en-US/locale.dtd
@@ -43,7 +43,7 @@
 <!ENTITY feedbar.updateEvery2 "minutes.">
 
 <!-- Only show items from the last # days. -->
-<!ENTITY feedbar.showAllItems "Show all items">
+<!ENTITY feedbar.showAllItemsFull "Show all items, regardless of age">
 <!ENTITY feedbar.onlyShow1 "Only show items from the last">
 <!ENTITY feedbar.onlyShow2 "days.">
 
