--- a/feedsidebar/chrome/locale/en-US/locale.properties
+++ b/feedsidebar/chrome/locale/en-US/locale.properties
@@ -32,3 +32,16 @@ feedbar.newItemsTitle=New Feed Items
 feedbar.newItemBody=You have one new feed item.
 feedbar.newItemsBody=You have %S new feed items.
 feedbar.workingOffline=Working offline
+
+feedbar.permalink=Permalink
+feedbar.feedLink=Feed Link
+feedbar.siteLink=Site Link
+
+# First %S is a date.
+# Second %S is a URL
+# Third %S is the feed name
+feedbar.publishedOn=Published on %S in <a href="%S">%S</a>
+
+# First %S is a URL
+# Second %S is a feed name
+feedbar.previewHeader=From <a href="%S">%S</a>
