--- a/feedsidebar/chrome/locale/pl-PL/locale.properties
+++ b/feedsidebar/chrome/locale/pl-PL/locale.properties
@@ -12,7 +12,7 @@ feedbar.errors.noFeedsFound=Nie znaleziono kanałów
 feedbar.errors.noFeedsFoundMore=Aby oglądać wiadomości z kanału w panelu bocznym, subskrybuj kanał za pomocą dynamicznych zakładek Firefoksa
 feedbar.errors.noFeedsFoundLabel=Więcej informacji
 feedbar.errors.noFeedsFoundKey=W
-feedbar.errors.couldNotUnsubscribe=Błąd. Feed Sidebar nie mógł usunąć kanału z zakładek
+feedbar.errors.couldNotUnsubscribe=Błąd. Feed Sidebar nie mógł usunąć kanału z zakładek.
 feedbar.errors.parseError=Błąd przetwarzania kanału.
 feedbar.errors.invalidUrl=Brak adresu kanału.
 feedbar.noTitle=Brak tytułu
@@ -22,3 +22,13 @@ feedbar.warnOnTabs=Informuj jeśli otwarcie wielu kart może spowolnić przeglą
 feedbar.warnOnTabsMessage=Zamierzasz otworzyć %S kart. Otwieranie tylu stron może spowolnić działanie przeglądarki. Czy na pewno chcesz kontynuować?
 feedbar.confirmOpenInTabs=Potwierdzenie otwierania
 feedbar.openConfirmText=Otwórz karty
+feedbar.newItemTitle=Nowy element kanału
+feedbar.newItemsTitle=Nowy elementy kanału
+feedbar.newItemBody=Masz jeden nowy element kanału
+feedbar.newItemsBody=Masz %S nowe(ych) elementów kanału
+feedbar.workingOffline=Praca offline
+feedbar.permalink=Odnośnik do bloga/forum
+feedbar.feedLink=Odnośnik do kanału
+feedbar.siteLink=Odnośnik do witryny
+feedbar.publishedOn=Opublikowano na %S w <a href="%S">%S</a>
+feedbar.previewHeader=Z <a href="%S">%S</a>
