--- a/feedsidebar/chrome/locale/de-DE/locale.properties
+++ b/feedsidebar/chrome/locale/de-DE/locale.properties
@@ -22,3 +22,13 @@ feedbar.warnOnTabs=Warnen, falls das Öffnen mehrerer Tabs den Browser verlangsa
 feedbar.warnOnTabsMessage=Es werden %S Tabs gleichzeitig geöffnet; das könnte den Computer verlangsamen, während die Seiten geladen werden. Sind Sie sicher, dass Sie fortfahren möchten?
 feedbar.confirmOpenInTabs=Öffnen bestätigen
 feedbar.openConfirmText=Tabs öffnen
+feedbar.newItemTitle=Neuer Feed-Eintrag
+feedbar.newItemsTitle=Neue Feed-Einträge
+feedbar.newItemBody=Ein neuer Feed-Eintrag
+feedbar.newItemsBody=%S neue Feed-Einträge
+feedbar.workingOffline=Derzeit offline
+feedbar.permalink=Permalink
+feedbar.feedLink=Feed
+feedbar.siteLink=Webseite
+feedbar.publishedOn=Veröffentlicht am %S in <a href="%S">%S</a>
+feedbar.previewHeader=Von <a href="%S">%S</a>
